test/sema/typeck/assign/reassign-unnamed-struct-field.out
error: cannot mutate field of immutable value type.
--> reassign-unnamed-struct-field.dora:2:35
 | struct Foo(Int32, Bool)
 | fn f() { let x = Foo(0i32, true); x.0 = 10i32; }
                                     ~~~~~~~~~~~
 | 
1 error found.
