test/sema/typeck/assign/reassign-unnamed-struct-field.dora
struct Foo(Int32, Bool)
fn f() { let x = Foo(0i32, true); x.0 = 10i32; }
